# appstream_creator_APP

./: README.md  REVIEW.md  io.github.user.appstreamcreator.json  meson.build
data/: io.github.user.appstreamcreator.desktop.in  io.github.user.appstreamcreator.gschema.xml  io.github.user.appstreamcreator.metainfo.xml.in  io.github.user.appstreamcreator.service.in  meson.build
data/icons/: meson.build
data/style/: main.css
po/: POTFILES.in  meson.build
src/: application.vala  appstream_creator_app.gresource.xml  main.vala  meson.build  window.ui  window.vala
src/dialogs/: release_dialog.vala  screenshot_dialog.vala
src/models/: appstream_data.vala
src/utils/: file_loader.vala  validator.vala  xml_generator.vala
src/widgets/: basic_info_group.vala  branding_group.vala  cat_group.vala  description_group.vala  developer_group.vala  launch_group.vala  license_group.vala  rating_group.vala  release_group.vala  screenshot_group.vala  url_group.vala
